Apache CouchDB CHANGES
======================

Version 1.2.0
-------------

This version has not been released yet.

OAuth:

 * Updated budled erlang_oauth library to the latest version.

Version 1.0.1
-------------

Storage System:

  * Fix data corruption bug COUCHDB-844. Please see
    http://couchdb.apache.org/notice/1.0.1.html for details.

Replicator:

  * Added support for replication via an HTTP/HTTPS proxy.
  * Fix pull replication of attachments from 0.11 to 1.0.x.
  * Make the _changes feed work with non-integer seqnums.

HTTP Interface:

  * Expose `committed_update_seq` for monitoring purposes.
  * Show fields saved along with _deleted=true. Allows for auditing of deletes.
  * More robust Accept-header detection.

Authentication:

  * Enable basic-auth popup when required to access the server, to prevent
    people from getting locked out.

Futon:

  * User interface element for querying stale (cached) views.

Build and System Integration:

  * Included additional source files for distribution.

Version 1.0.0
-------------

Security:

 * Added authentication caching, to avoid repeated opening and closing of the
   users database for each request requiring authentication.

Storage System:

 * Small optimization for reordering result lists.
 * More efficient header commits.
 * Use O_APPEND to save lseeks.
 * Faster implementation of pread_iolist(). Further improves performance on
   concurrent reads.

View Server:

 * Faster default view collation.
 * Added option to include update_seq in view responses.

Version 0.11.2
--------------

Replicator:

  * Fix bug when pushing design docs by non-admins, which was hanging the
    replicator for no good reason.
  * Fix bug when pulling design documents from a source that requires
    basic-auth.

HTTP Interface:

  * Better error messages on invalid URL requests.

Authentication:

  * User documents can now be deleted by admins or the user.

Security:
