@@ -13,6 +13,8 @@ Version 1.2.0
 This version has not been released yet.
 
  * Updated budled erlang_oauth library to the latest version.
+ * cURL is no longer required to build CouchDB as it is only
+   required by the command line JS test runner.
 
 Version 1.0.1
 -------------
